[package]
edition = "2021"
name = "twovec"
version = "1.1.0"
license = "MIT"
categories = ["data-structures"]
authors = ["Walnut356"]
description = "A data structure for storing 2 types of data in a packed, heap allocated array"
readme = "README.md"
repository = "https://github.com/Walnut356/twovec"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
either = "1.13.0"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
